# VariantTable

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  VariantTable.cmake  build.bat
cmake/: ExampleMaster.cmake  QtLocator.cmake  dependencies.cmake  utility.cmake
core/: CMakeLists.txt
core/inc/: CellDataBase.h  CellFactory.h  CellTypeRegistry.h  CellWidgetBase.h  ClipboardData.h  CopyPasteDelegate.h  Delegate.h  IconManager.h  Model.h  OverlayRect.h  TableView.h  VariantTable.h  VariantTable_base.h  VariantTable_debug.h  VariantTable_global.h  VariantTable_info.h
core/inc/ClipboardData/: CheckBoxClipboardData.h  CheckBoxListClipboardData.h  ComboBoxClipboardData.h  DateTimeClipboardData.h  QVariantClipboardData.h
core/inc/DefaultTypes/: BoolCell.h  CheckBox.h  CheckBoxList.h  ComboBox.h  DateEdit.h  DateTimeEdit.h  DefaultTypes.h  LineEdit.h  ProgressBar.h  PushButton.h  RadioButton.h  TextEdit.h  TimeEdit.h
core/resources/: icons.qrc  vt_icons_black.qrc  vt_icons_color.qrc
core/resources/icons_black/: lineEdit.xcf
core/src/: CellDataBase.cpp  CellTypeRegistry.cpp  Delegate.cpp  IconManager.cpp  Model.cpp  OverlayRect.cpp  TableView.cpp  VariantTable_debug.cpp  VariantTable_info.cpp
core/src/DefaultTypes/: CheckBox.cpp  CheckBoxList.cpp  ComboBox.cpp  DateEdit.cpp  DateTimeEdit.cpp  LineEdit.cpp  ProgressBar.cpp  PushButton.cpp  RadioButton.cpp  TextEdit.cpp  TimeEdit.cpp
examples/: CMakeLists.txt
examples/LibraryExample/: CMakeLists.txt  main.cpp
unittests/: CMakeLists.txt  UnitTest.cmake
unittests/ExampleTest/: CMakeLists.txt  main.cpp  tests.h
unittests/ExampleTest/tests/: TST_simple.h
unittests/TableTest/: AppIcon.rc  CMakeLists.txt
unittests/TableTest/tests/: TST_simple.h
